some Junit tests in product serviceImpl class done